--- a/BotToplivo/BotToplivo.csproj
+++ b/BotToplivo/BotToplivo.csproj
@@ -83,6 +83,10 @@
       <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="RestSharp, Version=105.2.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\RestSharp.105.2.3\lib\net46\RestSharp.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.IdentityModel.Tokens.Jwt, Version=4.0.30826.1200, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\System.IdentityModel.Tokens.Jwt.4.0.3.308261200\lib\net45\System.IdentityModel.Tokens.Jwt.dll</HintPath>
@@ -152,6 +156,18 @@
     <Compile Include="Models\Operation.cs" />
     <Compile Include="Models\Tank.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Speller\ArrayOfSpellResult.cs" />
+    <Compile Include="Speller\CharMistakeType.cs" />
+    <Compile Include="Speller\Lang.cs" />
+    <Compile Include="Speller\Mistake.cs" />
+    <Compile Include="Speller\OutputFormat.cs" />
+    <Compile Include="Speller\Speller.cs" />
+    <Compile Include="Speller\SpellerError.cs" />
+    <Compile Include="Speller\SpellerOptions.cs" />
+    <Compile Include="Speller\SpellResult.cs" />
+    <Compile Include="Speller\YandexError.cs" />
+    <Compile Include="Speller\YandexLinguisticsException.cs" />
+    <Compile Include="Speller\YandexService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
@@ -202,6 +218,9 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="logs\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
