--- a/BotToplivo/packages.config
+++ b/BotToplivo/packages.config
@@ -3,7 +3,6 @@
   <package id="Autofac" version="4.2.0" targetFramework="net46" />
   <package id="Chronic.Signed" version="0.3.2" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
-  <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net46" />
@@ -12,6 +11,7 @@
   <package id="Microsoft.Rest.ClientRuntime" version="2.3.3" targetFramework="net46" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.3" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net46" />
-  <package id="RestSharp" version="105.2.3" targetFramework="net46" />
+  <package id="RestSharpSigned" version="105.2.3" targetFramework="net46" />
   <package id="System.IdentityModel.Tokens.Jwt" version="4.0.3.308261200" targetFramework="net46" />
+  <package id="Yandex.Speller.Api" version="1.0.5650.35359" targetFramework="net46" />
 </packages>
