--- a/BotToplivo/BotToplivo.csproj
+++ b/BotToplivo/BotToplivo.csproj
@@ -152,6 +152,8 @@
     <Compile Include="Models\Operation.cs" />
     <Compile Include="Models\Tank.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Replay.cs" />
+    <Compile Include="Tranformations.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
